# IotaBF

./: .gitignore  BinaryTree.hs  Iota.hs  IotaBF.cabal  Lambda.hs  LambdaSKI.hs  LambdaToIota.hs  Nat.hs  README.md  Reducible.hs  SKI.hs  TypedLambda.hs
Functional/: BinaryTree.hs  Decode.hs  Iota.hs  Lambda.hs  Reducible.hs  SKI.hs
Functional/Lambda/: SKI.hs  Typed.hs  Untyped.hs
Functional/Lambda/Typed/: Bool.hs  Function.hs  Tuple.hs
Functional/Lambda/Typed/Tuple/: Projections.hs  ProjectionsTemplate.hs  Template.hs
lib/: Nat.hs  NatTypes.hs  THPrintType.hs
lib/Functional/: BinaryTree.hs  Decode.hs  Free.hs  Iota.hs  Lambda.hs  Reducible.hs  VChar.hs
lib/Functional/Iota/: Free.hs
lib/Functional/Lambda/: SKI.hs  Typed.hs
lib/Functional/Lambda/Typed/: Bool.hs  Eq.hs  FixedList.hs  Function.hs  Functor.hs  List.hs  Maybe.hs  Natural.hs  Render.hs  Semigroup.hs  Tuple.hs  Word.hs
lib/Functional/Lambda/Typed/Tuple/: Template.hs
lib/Types/: MaybeN.hs  Nat.hs
src/: Addition.hs  IotaEval.hs  LambdaEval.hs  LambdaToIota.hs  PrintLambdas.hs  PrintLambdasTemplate.hs  StrictIotaEval.hs
