cabal-version:          2.2

name:                   IotaBF
version:                0.1.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:                 olligobber
maintainer:             sirolligobbervii@yahoo.com.au
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:  CHANGELOG.md

common shared-properties
    default-language:   Haskell2010
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
                        -Wno-missing-import-lists
                        -Wno-unsafe
                        -Wno-safe
                        -Wno-missing-exported-signatures
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-deriving-strategies
                        -Wno-prepositive-qualified-module
                        -Wno-tabs

library
    import:             shared-properties
    hs-source-dirs:     lib
    exposed-modules:    Functional.BinaryTree
                      , Functional.Decode
                      , Functional.Iota
                      , Functional.Iota.Free
                      , Functional.Reducible
                      , Functional.SKI
                      , Functional.Lambda
                      , Functional.Lambda.SKI
                      , Functional.Lambda.Typed
                      , Functional.Lambda.Typed.Bool
                      , Functional.Lambda.Typed.Eq
                      , Functional.Lambda.Typed.Function
                      , Functional.Lambda.Typed.Maybe
                      , Functional.Lambda.Typed.Natural
                      , Functional.Lambda.Typed.Render
                      , Functional.Lambda.Typed.Tuple
                      , Functional.Lambda.Typed.Word
                      , THPrintType
    other-modules:      Types.Nat
                      , Types.MaybeN
                      , Functional.Lambda.Typed.Tuple.Template
    build-depends:      base >= 4.9
                      , validated-literals >= 0.3
                      , parsec >= 3.1
                      , containers >= 0.6
                      , mtl >= 2.2
                      , template-haskell >= 2.16

executable LambdaToIota
    import:             shared-properties
    main-is:            src/LambdaToIota.hs
    build-depends:      IotaBF
                      , base >= 4.9
                      , parsec >= 3.1

executable IotaEval
    import:             shared-properties
    main-is:            src/IotaEval.hs
    build-depends:      IotaBF
                      , base >= 4.9
                      , parsec >= 3.1

executable LambdaEval
    import:             shared-properties
    main-is:            src/LambdaEval.hs
    build-depends:      IotaBF
                      , base >= 4.9
                      , parsec >= 3.1

executable PrintLambdas
    import:             shared-properties
    main-is:            PrintLambdas.hs
    build-depends:      IotaBF
                      , base >= 4.9
                      , template-haskell >= 2.16
    hs-source-dirs:     src
    other-modules:      PrintLambdasTemplate
